# game-recipe-calc

./: Cargo.toml  LICENSE  README.md  game-recipe-calc-105c621a676c61d5.js  game-recipe-calc-105c621a676c61d5_bg.wasm  game-recipe-calc-16016c4da0beda70.js  game-recipe-calc-2f769f031c989a99.js  game-recipe-calc-2f769f031c989a99_bg.wasm  game-recipe-calc-37e90290985c20a3.js  game-recipe-calc-37e90290985c20a3_bg.wasm  game-recipe-calc-3c439ba9c5e077e5.js  game-recipe-calc-3c439ba9c5e077e5_bg.wasm  game-recipe-calc-84eff7c4cd30dc6d.js  game-recipe-calc-84eff7c4cd30dc6d_bg.wasm  game-recipe-calc-9cc1dd28161f43d9.js  game-recipe-calc-9cc1dd28161f43d9_bg.wasm  game-recipe-calc-be8eb456edea9606.js  game-recipe-calc-be8eb456edea9606_bg.wasm  game-recipe-calc-c2d409817f616a3f.js  game-recipe-calc-c2d409817f616a3f_bg.wasm  game-recipe-calc-c453f5de84a46988.js  game-recipe-calc-c453f5de84a46988_bg.wasm  game-recipe-calc-fd54c56a3cef43cc.js  game-recipe-calc-fd54c56a3cef43cc_bg.wasm  index-4b5c91584bb90e69.css  index-8c15c23404177ed7.css  index.html  index.scss
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/logic/: mod.rs
src/logic/evaluation/: mod.rs
src/logic/parsing/: example_input.txt  mod.rs
