[package]
name = "game-recipe-calc"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
repository = "https://github.com/holly-hacker/game-recipe-calc"
license = "MIT OR Apache-2.0"

[dependencies]
nom = "7.1"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }
yew = { version="0.20", features=["csr"] }
