[package]
name = "game-recipe-calc"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
repository = "https://github.com/holly-hacker/game-recipe-calc"
license = "MIT OR Apache-2.0"

[dependencies]
monaco = { git = "https://github.com/siku2/rust-monaco/", rev = "794a4cc7819f9ed7eb06559e24f75a41e23cf22a", features = ["yew-components"] }
nom = "7.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }
yew = { version="0.20", features=["csr"] }
